--- a/css/default.css
+++ b/css/default.css
@@ -37,6 +37,11 @@ header {
     font-size: 3vh;
 }
 
+#header-rule {
+    margin: 2vh auto;
+    border-top: 3px solid #7d97ad;
+}
+
 #banner {
     width: 100%;
 }
@@ -46,7 +51,7 @@ header {
     position: relative;
 	width: 300px;
     height: 400px;
-	padding:5px;
+	padding: 5px;
     background-color: #fff;
     transition: all 0.3s ease-in-out;
 }
