--- a/css/default.css
+++ b/css/default.css
@@ -46,6 +46,11 @@ header {
     width: 100%;
 }
 
+#projects-heading {
+    font-size: 5vh;
+    color: #7d97ad;
+}
+
 .project-card {
     display: inline-block;
     position: relative;
