Adjusted project cards
* Include app name as a heading
* Centered description
* Include GitHub logo to act as link, instead of the whole card acting as a link

--- a/css/default.css
+++ b/css/default.css
@@ -53,19 +53,34 @@ header {
 
 .project-card {
     display: inline-block;
-    position: relative;
 	width: 300px;
-    height: 400px;
 	padding: 5px;
     background-color: #fff;
     transition: all 0.3s ease-in-out;
 }
 
+
+
 .project-card:hover {
     box-shadow: 10px 10px 10px rgba(0,0,0,0.15);
 }
 
-.project-card a span {
+.project-title {
+    text-align: center;
+    font-size: 30px;
+    margin: 2vh;
+}
+
+.project-details {
+    text-align: center;
+    font-size: 20px;
+}
+
+.project-card-github {
+    position: relative;
+}
+
+.project-card-github a span {
     position: absolute; 
     width:100%;
     height:100%;
