--- a/css/default.css
+++ b/css/default.css
@@ -51,6 +51,13 @@ header {
     color: #7d97ad;
 }
 
+#projects-section {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 20px 0px;
+}
+
 .project-card {
     display: inline-block;
 	width: 300px;
@@ -58,8 +65,6 @@ header {
     background-color: #fff;
     transition: all 0.3s ease-in-out;
 }
-
-
 
 .project-card:hover {
     box-shadow: 10px 10px 10px rgba(0,0,0,0.15);
@@ -77,7 +82,11 @@ header {
 }
 
 .project-card-github {
+    margin: 10px;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .project-card-github a span {
