--- a/css/default.css
+++ b/css/default.css
@@ -1,7 +1,9 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
+    color: #2d3c49;
+    background-color: transparent;
 }
 
 img {
@@ -18,7 +20,6 @@ header {
     display: flex;
     align-items: center;
     padding: 10px;
-    flex-flow: wrap;
 }
 
 #header-right {
