--- a/css/default.css
+++ b/css/default.css
@@ -112,12 +112,14 @@ footer {
 
 /* Desktop */
 @media screen and (min-width: 1200px) {
-    #header-name {font-size: 81px}
-    #header-subheading {font-size: 39px}
-    #projects-heading {font-size: 60px}
+    #header-name {font-size: 81px;}
+    #header-subheading {font-size: 39px;}
+    #projects-heading {font-size: 60px;}
 } 
 
 /* Mobile */
 @media screen and (max-width: 676px) {
-    footer{flex-direction: column;}
+    #banner {display: none;}
+    #projects-heading {display: none;}
+    footer {flex-direction: column;}
 }
