--- a/css/default.css
+++ b/css/default.css
@@ -95,12 +95,16 @@ header {
 }
 
 .project-card-github a span {
-    position: absolute; 
+    position: absolute;
     width:100%;
     height:100%;
     top:0;
     left: 0;
     z-index: 1;
+}
+
+.undecorated-link {
+    text-decoration: none;
 }
 
 footer {
@@ -115,7 +119,7 @@ footer {
     #header-name {font-size: 81px;}
     #header-subheading {font-size: 39px;}
     #projects-heading {font-size: 60px;}
-} 
+}
 
 /* Mobile */
 @media screen and (max-width: 676px) {
